--- a/content/editor.html
+++ b/content/editor.html
@@ -21,7 +21,8 @@
     <button id="save" class="btn btn-default"><i class="glyphicon glyphicon-floppy-save"></i></button>
     <button id="load" class="btn btn-default"><i class="glyphicon glyphicon-folder-open"></i></button>
     <button id="section" class="btn btn-default">section</button>
-    <button id="picture" class="btn btn-default">picture</button>
+    <button id="graphic" class="btn btn-default">graphic</button>
+    <button id="itemize" class="btn btn-default">itemize</button>
   </div>
   <div id="editor" style="height: 600px">
 \documentclass{jsarticle}
@@ -74,13 +75,20 @@
     $('#section').click(function(e){
       editor.insert('\\section{' + editor.getCopyText() + '}');
     });
-    $('#picture').click(function(e){
+    $('#graphic').click(function(e){
       editor.insert('\\begin{figure}\n' + ' \\centering\n' + 
         ' \\includegraphics[width=10cm]{画像ファイル名}\n' + 
         ' \\caption{題名}\n' +
         ' \\label{ラベル名}\n' +
         '\\end{figure}\n' + editor.getCopyText()
       );
+    });
+    $('#itemize').click(function(e) {
+      editor.insert('\\begin{itemize}\n' + 
+          '\\item \n' + 
+          '\\item \n' + 
+          '\\item \n' +
+          '\\end{itemize}');
     });
   </script>
 </body>
